--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Markazi+Text:wght@400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Website Style Guide</title>
 </head>
 <body>
     <main>
         <h1 class="title">My Website Style Guide</h1>
+        
         <section class="section-group">
-            <h2 class="title">Colors</h2>
+            <h2 class="mb-1 mt-1">Colors</h2>
             <div class="elements-group">
                 <div class="box-group" id="navy-blue">
                     <p>Navy Blue</p>
@@ -32,10 +36,56 @@
         </section>
 
         <section class="section-group">
-            <h2 class="title">Fonts</h2>
+            <h2 class="mb-1 mt-1">Fonts</h2>
             <div class="elements-group">
-                <div class="font-group">
-                    
+                <div class="font-group funnel-font">
+                    <h3 class="font-title">Funnel Sans</h3>
+                    <p class="regular mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="bold mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="light mb-1">The quick brown fox jumps over the lazy dog</p>
+                </div>
+                <div class="font-group markazi-font">
+                    <h3 class="font-title">Markazi Text</h3>
+                    <p class="regular mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="bold mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="light mb-1">The quick brown fox jumps over the lazy dog</p>
+                </div>
+                <div class="font-group nunito-font">
+                    <h3 class="font-title">Nunito</h3>
+                    <p class="regular mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="bold mb-1">The quick brown fox jumps over the lazy dog</p>
+                    <p class="light mb-1">The quick brown fox jumps over the lazy dog</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-group">
+            <h2 class="mb-1 mt-1">Text Styles</h2>
+            <div class="elements-group">
+                <h1 class="text-style-title">H1: Main page heading</h1>
+                <div class="text-style-container">
+                    <ul>
+                        <li>Font-weight: 700 (bold)</li>
+                        <li>Font-size: 26px</li>
+                        <li>Font-family: Nunito Sans</li>
+                    </ul>
+                </div>
+
+                <h2 class="text-style-subtitle">H2: Subheading</h2>
+                <div class="text-style-container">
+                        <ul>
+                            <li>Font-weight: 500</li>
+                            <li>Font-size: 18px</li>
+                            <li>Font-family: Markazi Font</li>
+                        </ul> 
+                </div>
+                <p class="text-style-paragraph">P: Paragraph Text</p>
+                <div class="text-style-container">
+                    <ul>
+                        <li>Font-weight: 400 (regular)</li>
+                        <li>Font-size: 14px</li>
+                        <li>Font-family: Funnel Font</li>
+                    </ul>
                 </div>
             </div>
         </section>
